Add runtime provider manager and make plugin independent
